--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <title>mcstructure editer</title>
@@ -11,7 +10,7 @@
 
   <body>
     <p><input type="file" id="editfile"></p>
-    <div id='logs' ></div>
+    <div id="logs" ></div>
   </body>
     
 </html>
