--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <title>mcstructure editer</title>
   </head>
