--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <p><input type="file" id="editfile"></p>
+    <input type="file" id="editfile"/>
     <div id="logs" ></div>
   </body>
     
