--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <input type="file" id="editfile"/>
+    <input type="file" id="file"/>
     <div id="logs" ></div>
   </body>
     
