--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="UTF-8">
-    <script src="./jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <title>mcstructure editer</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <script src="./jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+  <script src="nbt.js"></script>
+  <title>mcstructure editer</title>
+</head>
 
-  <body>
-    <input type="file" id="file"/>
-    <div id="logs" ></div>
-  </body>
-    
+<body>
+  <input type="file" id="file" />
+  <div id="logs"></div>
+</body>
+
 </html>
